--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,3 +18,11 @@ django-storages          # Django storage backends (S3, etc.)
 Pillow                   # Image processing for profile pictures
 django-phonenumber-field # Phone number validation and formatting
 phonenumbers             # Phone number parsing and validation
+
+# Phase 3.5: Global API Infrastructure
+djangorestframework-throttling==0.1.0  # Rate limiting and throttling
+django-redis==5.4.0                    # Redis caching backend
+drf-spectacular==0.27.0                # OpenAPI/Swagger documentation
+openpyxl==3.1.2                        # Excel export/import support
+redis==5.0.1                           # Redis Python client
+django-cacheops==8.1.0                 # Advanced caching operations
