--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,21 +8,19 @@ gunicorn==22.0.0
 # JWT Authentication
 djangorestframework-simplejwt==5.3.0
 
-# Filtering and Search (CRITICAL - Missing!)
+# Filtering and Search
 django-filter==23.5
-# Geographic and GIS support (using basic calculations instead)
 
 # Additional packages for enhanced features
-boto3                    # AWS S3 integration for file storage
-django-storages          # Django storage backends (S3, etc.)
-Pillow                   # Image processing for profile pictures
-django-phonenumber-field # Phone number validation and formatting
-phonenumbers             # Phone number parsing and validation
+boto3==1.34.0                    # AWS S3 integration for file storage
+django-storages==1.14.2          # Django storage backends (S3, etc.)
+Pillow==10.1.0                   # Image processing for profile pictures
+django-phonenumber-field==7.3.0  # Phone number validation and formatting
+phonenumbers==8.13.25            # Phone number parsing and validation
 
 # Phase 3.5: Global API Infrastructure
-djangorestframework-throttling==0.1.0  # Rate limiting and throttling
 django-redis==5.4.0                    # Redis caching backend
 drf-spectacular==0.27.0                # OpenAPI/Swagger documentation
 openpyxl==3.1.2                        # Excel export/import support
 redis==5.0.1                           # Redis Python client
-django-cacheops==8.1.0                 # Advanced caching operations
+django-cacheops==7.2                   # Advanced caching operations
